# embedded-examples

./: README.md
circuitpython/feather_rp2040/: st7735r_button_example.py  st7735r_example.py
circuitpython/itsy_bitsy_rp2040/: airlift_bitsy.py
micropython/huzzah32_feather/: ble_test.py  led_touch_test.py  webserver_test.py
rust/pico/aht20_example/: Cargo.toml
rust/pico/aht20_example/src/: .main.rs.rustfmt  main.rs
rust/pico/st7735_example/: Cargo.toml
rust/pico/st7735_example/src/: main.rs
rust/stm32/stm32spitest/: Cargo.toml
rust/stm32/stm32spitest/src/: main.rs
rust/stm32/stm32test/: Cargo.toml
rust/stm32/stm32test/src/: main.rs
