[package]
name = "stm32spitest"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
#panic-halt = "0.2.0"
panic-semihosting = "0.5.6"
# Replace stm32f303xc with your target chip, see next section for more info
stm32f3xx-hal = { version = "0.8.2", features = ["ld", "rt", "stm32f303xc"] }
st7735-lcd = "0.8"

[dependencies.embedded-graphics]
version = "0.7"
optional = true

[profile.dev]
debug = 1

[profile.release]
debug = 1

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
